src/objects/Epayment_Response__c.object
<CustomObject>
    <fields>
        <fullName>Cart_Id__c</fullName>
        <label>Cart Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Epayment_Conformation_Id__c</fullName>
        <label>Epayment Conformation Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Ids__c</fullName>
        <label>Fee Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Epayment Response</label>
    <nameField>
        <label>EpaymentResponse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Epayment Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>